--- a/layout_marathon/index.html
+++ b/layout_marathon/index.html
@@ -4,12 +4,41 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>MartaUp</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <p> Hi!</p>
+<header class="header">
+<div class="container">
+<div class="header__top">
+  <div class="logo">
+    <a href="#">
+      <img src="images/Logo.svg" alt="">
+    </a>
+  </div>
+
+  <nav class="menu">
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Work</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </nav>
+
+  <div class="header-btn">
+    <a class="login" href="">login</a>
+    <a class="sign-up" href="">sign up</a>
+  </div>
+<!-- 1:10 -->
+</div>
+
+
+</div>
+
+</header>
+
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/main.js"></script>
