--- a/layout_marathon/index.html
+++ b/layout_marathon/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>MartaUp</title>
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -19,7 +20,7 @@
   </div>
 
   <nav class="menu">
-    <ul>
+    <ul class="menu__list">
       <li><a href="#">Home</a></li>
       <li><a href="#">Work</a></li>
       <li><a href="#">About</a></li>
@@ -31,7 +32,7 @@
     <a class="login" href="">login</a>
     <a class="sign-up" href="">sign up</a>
   </div>
-<!-- 1:10 -->
+  
 </div>
 
 
