--- a/layout_marathon/index.html
+++ b/layout_marathon/index.html
@@ -7,6 +7,7 @@
   <title>MartaUp</title>
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/slick.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -35,6 +36,92 @@
   
 </div>
 
+<div class="header-slider">
+
+  <div class="header-slider__item">
+    <div class="header-slider__item-content">
+      <div class="header-slder__item-info">
+        <h3 class="header-slider__title">
+          We Build Apps & Websites
+          for Your Business
+        </h3>
+        <div class="header-slider__description">For startups, For businesses & For you</div>
+        <a class="header-slider__btn" href="#">Request a quote</a>
+      </div>
+      <div class="header-slider__item-images">
+        <img src="images/slider-img.png" alt="">
+
+      </div>
+    </div>
+  </div>
+
+  <div class="header-slider__item">
+    <div class="header-slider__item-content">
+      <div class="header-slder__item-info">
+        <h3 class="header-slider__title">
+          We Build Apps & Websites
+          for Your Business
+        </h3>
+        <div class="header-slider__description">For startups, For businesses & For you</div>
+        <a class="header-slider__btn" href="#">Request a quote</a>
+      </div>
+      <div class="header-slider__item-images">
+        <img src="images/slider-img.png" alt="">
+
+      </div>
+    </div>
+  </div>
+  <div class="header-slider__item">
+    <div class="header-slider__item-content">
+      <div class="header-slder__item-info">
+        <h3 class="header-slider__title">
+          We Build Apps & Websites
+          for Your Business
+        </h3>
+        <div class="header-slider__description">For startups, For businesses & For you</div>
+        <a class="header-slider__btn" href="#">Request a quote</a>
+      </div>
+      <div class="header-slider__item-images">
+        <img src="images/slider-img.png" alt="">
+
+      </div>
+    </div>
+  </div>
+  <div class="header-slider__item">
+    <div class="header-slider__item-content">
+      <div class="header-slder__item-info">
+        <h3 class="header-slider__title">
+          We Build Apps & Websites
+          for Your Business
+        </h3>
+        <div class="header-slider__description">For startups, For businesses & For you</div>
+        <a class="header-slider__btn" href="#">Request a quote</a>
+      </div>
+      <div class="header-slider__item-images">
+        <img src="images/slider-img.png" alt="">
+
+      </div>
+    </div>
+  </div>
+  <div class="header-slider__item">
+    <div class="header-slider__item-content">
+      <div class="header-slder__item-info">
+        <h3 class="header-slider__title">
+          We Build Apps & Websites
+          for Your Business
+        </h3>
+        <div class="header-slider__description">For startups, For businesses & For you</div>
+        <a class="header-slider__btn" href="#">Request a quote</a>
+      </div>
+      <div class="header-slider__item-images">
+        <img src="images/slider-img.png" alt="">
+
+      </div>
+    </div>
+  </div>
+
+</div>
+
 
 </div>
 
@@ -42,6 +129,7 @@
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="js/slick.min.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
