--- a/layout_marathon/index.html
+++ b/layout_marathon/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,132 +11,165 @@
   <link rel="stylesheet" href="css/slick.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-<header class="header">
-<div class="container">
-<div class="header__top">
-  <div class="logo">
-    <a href="#">
-      <img src="images/Logo.svg" alt="">
-    </a>
-  </div>
+  <header class="header">
+    <div class="container">
+      <div class="header__top">
+        <div class="logo">
+          <a href="#">
+            <img src="images/Logo.svg" alt="">
+          </a>
+        </div>
 
-  <nav class="menu">
-    <ul class="menu__list">
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Work</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
-  </nav>
+        <nav class="menu">
+          <ul class="menu__list">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Work</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </nav>
 
-  <div class="header-btn">
-    <a class="login" href="">login</a>
-    <a class="sign-up" href="">sign up</a>
-  </div>
-  
-</div>
+        <div class="header-btn">
+          <a class="login" href="">login</a>
+          <a class="sign-up" href="">sign up</a>
+        </div>
 
-<div class="header-slider">
-
-  <div class="header-slider__item">
-    <div class="header-slider__item-content">
-      <div class="header-slder__item-info">
-        <h3 class="header-slider__title">
-          We Build Apps & Websites
-          for Your Business
-        </h3>
-        <div class="header-slider__description">For startups, For businesses & For you</div>
-        <a class="header-slider__btn" href="#">Request a quote</a>
       </div>
-      <div class="header-slider__item-images">
-        <img src="images/slider-img.png" alt="">
+
+      <div class="header-slider">
+
+        <div class="header-slider__item">
+          <div class="header-slider__item-content">
+            <div class="header-slder__item-info">
+              <h3 class="header-slider__title">
+                We Build Apps & Websites
+                for Your Business
+              </h3>
+              <div class="header-slider__description">For startups, For businesses & For you</div>
+              <a class="header-slider__btn" href="#">Request a quote</a>
+            </div>
+            <div class="header-slider__item-images">
+              <img src="images/slider-img.png" alt="">
+
+            </div>
+          </div>
+        </div>
+
+        <div class="header-slider__item">
+          <div class="header-slider__item-content">
+            <div class="header-slder__item-info">
+              <h3 class="header-slider__title">
+                We Build Apps & Websites
+                for Your Business
+              </h3>
+              <div class="header-slider__description">For startups, For businesses & For you</div>
+              <a class="header-slider__btn" href="#">Request a quote</a>
+            </div>
+            <div class="header-slider__item-images">
+              <img src="images/slider-img.png" alt="">
+
+            </div>
+          </div>
+        </div>
+        <div class="header-slider__item">
+          <div class="header-slider__item-content">
+            <div class="header-slder__item-info">
+              <h3 class="header-slider__title">
+                We Build Apps & Websites
+                for Your Business
+              </h3>
+              <div class="header-slider__description">For startups, For businesses & For you</div>
+              <a class="header-slider__btn" href="#">Request a quote</a>
+            </div>
+            <div class="header-slider__item-images">
+              <img src="images/slider-img.png" alt="">
+
+            </div>
+          </div>
+        </div>
+        <div class="header-slider__item">
+          <div class="header-slider__item-content">
+            <div class="header-slder__item-info">
+              <h3 class="header-slider__title">
+                We Build Apps & Websites
+                for Your Business
+              </h3>
+              <div class="header-slider__description">For startups, For businesses & For you</div>
+              <a class="header-slider__btn" href="#">Request a quote</a>
+            </div>
+            <div class="header-slider__item-images">
+              <img src="images/slider-img.png" alt="">
+
+            </div>
+          </div>
+        </div>
+        <div class="header-slider__item">
+          <div class="header-slider__item-content">
+            <div class="header-slder__item-info">
+              <h3 class="header-slider__title">
+                We Build Apps & Websites
+                for Your Business
+              </h3>
+              <div class="header-slider__description">For startups, For businesses & For you</div>
+              <a class="header-slider__btn" href="#">Request a quote</a>
+            </div>
+            <div class="header-slider__item-images">
+              <img src="images/slider-img.png" alt="">
+
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+
+    </div>
+
+  </header>
+
+
+
+  <section class="specialised">
+    <div class="container">
+      <div class="specialised__title title">
+        We are specialised in
+      </div>
+
+      <div class="specialised__items">
+        <div class="specialised__item">
+         <div class="specialised__item-img"> <img src="images/special-1.svg" alt="" > </div>
+          <div class="specialised__item-title">UI/UX Design</div>
+          <div class="specialised__item-text">In hac habitasse platea dictumstmus adipiscing fermentum quam volutpat
+            aliquam. Integer cilisis tristique.</div>
+        </div>
+
+        <div class="specialised__item">
+          <div class="specialised__item-img"> <img src="images/special-2.svg" alt="" > </div>
+          <div class="specialised__item-title">Web Development</div>
+          <div class="specialised__item-text">In hac habitasse platea dictumstmus adipiscing fermentum quam volutpat
+            aliquam. Integer cilisis tristique.</div>
+        </div>
+
+        <div class="specialised__item">
+          <div class="specialised__item-img"> <img src="images/special-3.svg" alt="" > </div>
+          <div class="specialised__item-title">App Development</div>
+          <div class="specialised__item-text">In hac habitasse platea dictumstmus adipiscing fermentum quam volutpat
+            aliquam. Integer cilisis tristique.</div>
+        </div>
 
       </div>
     </div>
-  </div>
-
-  <div class="header-slider__item">
-    <div class="header-slider__item-content">
-      <div class="header-slder__item-info">
-        <h3 class="header-slider__title">
-          We Build Apps & Websites
-          for Your Business
-        </h3>
-        <div class="header-slider__description">For startups, For businesses & For you</div>
-        <a class="header-slider__btn" href="#">Request a quote</a>
-      </div>
-      <div class="header-slider__item-images">
-        <img src="images/slider-img.png" alt="">
-
-      </div>
-    </div>
-  </div>
-  <div class="header-slider__item">
-    <div class="header-slider__item-content">
-      <div class="header-slder__item-info">
-        <h3 class="header-slider__title">
-          We Build Apps & Websites
-          for Your Business
-        </h3>
-        <div class="header-slider__description">For startups, For businesses & For you</div>
-        <a class="header-slider__btn" href="#">Request a quote</a>
-      </div>
-      <div class="header-slider__item-images">
-        <img src="images/slider-img.png" alt="">
-
-      </div>
-    </div>
-  </div>
-  <div class="header-slider__item">
-    <div class="header-slider__item-content">
-      <div class="header-slder__item-info">
-        <h3 class="header-slider__title">
-          We Build Apps & Websites
-          for Your Business
-        </h3>
-        <div class="header-slider__description">For startups, For businesses & For you</div>
-        <a class="header-slider__btn" href="#">Request a quote</a>
-      </div>
-      <div class="header-slider__item-images">
-        <img src="images/slider-img.png" alt="">
-
-      </div>
-    </div>
-  </div>
-  <div class="header-slider__item">
-    <div class="header-slider__item-content">
-      <div class="header-slder__item-info">
-        <h3 class="header-slider__title">
-          We Build Apps & Websites
-          for Your Business
-        </h3>
-        <div class="header-slider__description">For startups, For businesses & For you</div>
-        <a class="header-slider__btn" href="#">Request a quote</a>
-      </div>
-      <div class="header-slider__item-images">
-        <img src="images/slider-img.png" alt="">
-
-      </div>
-    </div>
-  </div>
-
-</div>
-
-
-</div>
-
-</header>
+  </section>
 
 
 
-<section class="specialised">
-  <!-- 1:47 -->
-</section>
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/slick.min.js"></script>
   <script src="js/main.js"></script>
 </body>
+
 </html>
